--- a/src/pages/blog/category/gaussian-splatting.astro
+++ b/src/pages/blog/category/gaussian-splatting.astro
@@ -1,18 +1,17 @@
 ---
-// File: src/pages/blog/category/gaussiansplatting.astro
-import { getCollection } from 'astro:content';
 import Layout from '../../../layouts/Layout.astro';
 import BlogPost from '../../../layouts/BlogPost.astro';
+import { getCollection } from 'astro:content';
 
 const allPosts = await getCollection('blog');
 const gaussianSplattingPosts = allPosts.filter(post => post.data.category === "GaussianSplatting");
 ---
 
-<Layout title="Gaussian Splatting Blog Posts">
+<Layout title="Gaussian Splatting | Neural Diwan">
   <div class="max-w-4xl mx-auto px-4 py-8">
     <h1 class="text-4xl font-bold mb-8">Gaussian Splatting</h1>
     
-    <div class="grid gap-8 md:grid-cols-2">
+    <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-3">
       {gaussianSplattingPosts.map((post) => <BlogPost post={post} />)}
     </div>
 
