--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ const currentPath = Astro.url.pathname;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{title} | Rubaiyat of Reason</title>
+    <title>{title} | Neural Diwan</title>
   </head>
   <body class="flex flex-col min-h-screen bg-background text-text-primary">
     <Header currentPath={currentPath} />
